unpackaged/main/default/objects/Barrel_Order_Group__c/Barrel_Order_Group__c.object-meta.xml
<CustomObject>
    <description>Initially created for the Single Barrel Program.  This object is used to group orders that are placed at the same time by a sales rep for the same account.</description>
    <label>Barrel Order Group</label>
    <nameField>
        <displayFormat>Barrel Group-{00000}</displayFormat>
        <label>Barrel Order Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Barrel Order Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>