unpackaged/main/default/objects/Barrel_Order_Group__c/fields/Barrel_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Barrel_Order_Id__c</fullName>
    <externalId>true</externalId>
    <label>Barrel_Order_Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>