unpackaged/main/default/objects/Barrel_Order_Group__c/fields/Number_of_Sample_Kits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sample_Kits__c</fullName>
    <label>Number of Sample Kits</label>
    <summaryForeignKey>Sample_Kit__c.Barrel_Order_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>