unpackaged/main/default/objects/Barrel_Order_Group__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trip and Tour</fullName>
            </value>
            <value>
                <fullName>Sample Kit</fullName>
            </value>
            <value>
                <fullName>Distiller's Choice</fullName>
            </value>
            <value>
                <fullName>Split Barrel</fullName>
            </value>
            <value>
                <fullName>Remote Selection</fullName>
            </value>
            <value>
                <fullName>Recent Recipes</fullName>
            </value>
            <value>
                <fullName>Date Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>