unpackaged/main/default/objects/Barrel_Order_Group__c/listViews/Cruzan_Single_Barrel_Barrel_Order_Group.listView-meta.xml
<ListView>
    <fullName>Cruzan_Single_Barrel_Barrel_Order_Group</fullName>
    <filterScope>Queue</filterScope>
    <label>Cruzan - Single Barrel</label>
    <queue>Cruzan_Single_Barrel</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>