unpackaged/main/default/objects/Barrel_Order_Group__c/listViews/Jim_Beam_Single_Barrel_Barrel_Order_Group.listView-meta.xml
<ListView>
    <fullName>Jim_Beam_Single_Barrel_Barrel_Order_Group</fullName>
    <filterScope>Queue</filterScope>
    <label>Jim Beam - Single Barrel</label>
    <queue>Jim_Beam_Single_Barrel</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>